fixing rules page not showing properly until resizing the window

--- a/static/styles.css
+++ b/static/styles.css
@@ -115,8 +115,17 @@ ul {
 }
 
 .rules-page {
+    display: none;
     text-align: center;
     margin-bottom: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f4f4f4;
+    overflow-y: auto;
+    z-index: 1000;
 }
 
 .rules-page h2 {
